@@ -1,3 +1,11 @@
+2004-08-22  Eric A. Welsh <ewelsh@ccb.wustl.edu>
+
+	* timidity/mix.c (next_stage):
+	  Added bounds checking after scaling envelope rates when
+	  opt_tva_attack and/or opt_tva_decay are enabled.  This fixes
+	  previous short/silent note problems when these options were
+	  enabled.
+
 2004-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* interface/alsaseq_c.c, interface/rtsyn_common.c,
